<resources>
    <string name="app_name">Laki Hero</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noaccount">Belum punya akun?</string>
    <string name="signup">Sign up</string>
    <string name="nama">Nama</string>
    <string name="haveaccount">Sudah punya akun?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home">Home</string>
    <string name="tentangaplikasi">Tentang Aplikasi</string>
    <string name="reward">Reward</string>
    <string name="riwayat">Riwayat</string>
    <string name="about">About</string>
    <string name="laporanSaya">Laporan Saya</string>
    <string name="profile">Profile</string>
    <string name="empty_image_warning">Please Insert the image first</string>
    <string name="place">Tempat</string>
    <string name="status">Status</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tanggal">20 june 2024</string>
    <string name="search">Search</string>
    <string name="searchBar_hint">Masukkan kata</string>
    <string name="BASE_URL">"https://story-api.dicoding.dev/v1"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laporanterbaru">Laporan terbaru</string>
    <string name="buatlaporan">Buat laporan</string>
    <string name="signout">Sign Out</string>
    <string name="kamera">Kamera</string>
    <string name="tempat">Tempat</string>
    <string name="deskripsiadd">Tambahkan deskripsi kondisi tempat, juru parkir, dan harga</string>
    <string name="submit">Submit</string>
    <string name="detaillaporan">Detail laporan</string>
    <string name="imagedetail">imageDetail</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="close">Close</string>
    <string name="largeText">"LAKI-HERO" adalah aplikasi mobile yang dirancang untuk membantu masyarakat melaporkan keberadaan juru parkir liar dengan mudah, cepat, efektif dan efisien. Aplikasi ini menyediakan platform yang user-friendly, sehingga semua kalangan masyarakat dapat menggunakannya tanpa kesulitan.
                                Dengan desain antarmuka yang sederhana namun efektif, pengguna dapat melaporkan lokasi juru parkir liar hanya dengan beberapa ketukan di layar ponsel anda.</string>
    <string name="support">Supported by \nPD Parkir Raya Makassar</string>
    <string name="beranda">Beranda</string>
    <string name="tentang">Tentang</string>
    <string name="pdparkir">pdparkir</string>
    <string name="poin">Poin saya</string>
    <string name="nomor">1500</string>
    <string name="location">Location</string>
    <string name="transfermasuk">Transfer masuk</string>
    <string name="rp">Rp</string>
    <string name="uangAngka">1500</string>
    <string name="aktivitas">Aktivitas</string>
</resources>