<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TambahLaporanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/black"
            app:titleTextAppearance="@style/ToolbarTitleText"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/main1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_campur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/addLaporanIv"
                        android:layout_width="0dp"
                        android:layout_height="400dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/laki_logo"
                        android:backgroundTint="@color/young_grey"
                        android:scaleType="centerInside"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/kamera_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/kamera"
                        android:textStyle="bold"
                        android:backgroundTint="@color/orange"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/addLaporanIv"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tempatInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/kamera_btn">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_add_tempat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/young_grey"
                            android:hint="@string/tempat"
                            android:maxLines="1"
                            android:padding="10dp"
                            tools:ignore="TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tempatInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_add_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:padding="10dp"
                            android:maxLines="5"
                            android:lines="5"
                            android:inputType="textMultiLine"
                            android:background="@color/young_grey"
                            android:hint="@string/deskripsi" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_map_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/addressTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/address"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_donation_event_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Jl. Pulau Riau, Dauh Puri Klod, Kec. Denpasar Bar., Kota Denpasar, Bali 80114" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_map"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        app:cardCornerRadius="8dp">

                        <fragment
                            android:id="@+id/IdMap"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/birusubmit"
                android:text="@string/submit"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
